--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,27 +1,44 @@
 /*TABLE FOR SEARCH TEST*/
 table {
 	width: 90%;
+    margin: 3% auto auto 5%;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.6);
+    
 }
 tr:nth-child(odd) {
-	background-color: #ff0000;
-	color: #fff;
+	background-color: #f8f8f8;
+	color: rgb(0, 0, 0);
+    
 }
-#first tr:nth-child(odd) {
-	background-color: #55d855;
-	color: #fff;
-	width: 100%;
-}
+
 /*END TABLE FOR SEARCH TEST*/
 
-td {
-	border: solid 1px #000;
+th {
+    
+    font-size: 110%;
+    font-weight: bold;
+    
+}
+
+.bold{
+    font-weight: bold;
+    background-color: #f8f8f8;
+    width: 15%;
+}
+
+.textocell{
+    text-align: center;
+}
+
+td, th {
+	border: solid 1px rgba(0, 0, 0, 0.1);
 	padding: 5px 10px;
-	font-weight: bold;
-	width: 25%;
+	font-family: Roboto;
 }
 * {
 	margin: 0;
 	padding: 0;
+   
 }
 #wrapper {
 	width: 100%;
@@ -35,13 +52,16 @@ td {
 }
 #pageHeader h1 {
 	float: left;
+    
 }
 #pageHeader h1 a {
 	color: #000;	
 	text-decoration: none;
+    font-family: Roboto;
 }
 #pageHeader h2 {
 	float: right;
+    font-family: Roboto;
 }
 #pageHeader:before, #pageHeader:after {
 	content: "";
@@ -56,6 +76,7 @@ td {
 }
 #productsControlNavigation ul li {
 	display: inline-block;
+    font-family: Roboto;
 }
 #productsControlNavigation ul li a {	
 	color: #fff;
@@ -74,4 +95,102 @@ td {
 }
 #productsControlNavigation ul li:last-child a {
 	width: 100px;
+}
+
+
+/*ações da lista de produtos */
+.edita, .deleta, .detalhes {
+    width: 80px;
+    height: 25px;
+    border-radius: 4px;
+    color:white;
+    margin-top: 2%;
+    margin-right: 2%;
+    float: left;
+    font-weight: bold;
+}
+
+
+#acoes{
+    width: 35%;
+}
+.edita {
+    background-color: #48aaff;
+}
+
+.edita:hover {
+    background-color: #236ba8;
+}
+
+.deleta {
+    background-color: #ef2424;
+}
+
+.deleta:hover {
+    background-color: #881313;
+}
+
+.detalhes {
+    background-color: #0e5fe0;
+    
+}
+
+.detalhes:hover {
+    background-color: #081996;
+}
+
+/*fim das ações*/
+
+
+/* banner dashboard*/
+article {
+    width: 80%;
+    margin: 3% auto auto 10%;
+    
+}
+.bannerdash {
+    width: 29%;
+    margin: auto 2% auto 2%;
+    height: 500px;
+    border-radius: 4px;
+    border: 1px solid rgba(0,0,0,0.3);
+    float: left;
+    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.4);
+    color: #ffffff;
+    text-decoration: none;
+    box-sizing: border-box;
+}
+
+.bannerdash:hover {
+    font-size: 130%;
+    
+}
+
+.fundo p {
+    text-align: center;
+    font-family: Roboto;
+    font-size: 200%;
+    font-weight: bolder;
+    padding-top: 70%;
+}
+
+
+#esquerda {
+    background: url(img/estoque.jpg) no-repeat;
+}
+
+#meio {
+    background: url(img/categ.jpg) no-repeat;
+}
+
+#direita {
+    background: url(img/user.jpg) no-repeat;
+}
+
+.fundo:hover{
+   
+    transition: background-color 0.2s linear 0s; ;
+     width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
 }
