--- a/testeestilo.css
+++ b/testeestilo.css
@@ -36,21 +36,31 @@
 #wrapper {
 	width: 100%;
 }
+#wrapper:before, #wrapper:after {
+	content: "";
+	display: table;
+	clear: both;
+}
 #pageHeader, #productsControlNavigation {
 	box-sizing: border-box;
 	width: 100%;
 }
 #pageHeader {
-	padding: 20px 50px;
 	background-color: #002244;
+	padding: 10px 45px;
+	width: 100%;
 }
-#pageHeader img {
-	width: 150px;
+#pageHeader #logo {	
+	width: 100px;
 }
-
 #pageHeader h2 {
+	background: url(imagems/avatar.jpg) left no-repeat;
+	color: #69be28;
 	float: right;
-	margin-top: 20px;
+	font-size: 17px;
+	height: 17px;
+	margin-top: 10px;
+	padding-left: 25px;
 }
 #pageHeader:before, #pageHeader:after {
 	content: "";
@@ -78,6 +88,7 @@
 }
 #productsControlNavigation ul li a:hover {
 	background-color: #002244;
+	border-bottom: solid 4px #a5acaf;
 	color: #69be28;
 }
 #productsControlNavigation ul li:last-child {
@@ -89,73 +100,81 @@
 /*FIM CABEÇHALHO E NAVEGAÇÃO*/
 
 /*FORMULARIO DE PESQUISA DE PRODUTOS*/
-.searchForme{			
-	margin-left:20%;
-	margin-bottom:20px;
+#prodNavigation {
+	background-color: #002244;
+	box-sizing: border-box;
+	height: 60px;
+	margin-top: -20px;
+	padding: 10px 20px;
+	position: relative;
+	text-align: center;
+	width: 100%;
 }
-.borderSearch{
-	border: 6px solid #002244;
-	background-color:#002244;
-	border-radius: 6px;
-	float:left;
-	margin-right:100px;
-}
-form div input[type=text]{
-	border:none;
-	background-color:#002244;
-	border-bottom: solid 1px #fff;
-	color: #fff;
-	width: 500px;
-	height: 30px;
-	font-size:120%;
-	outline: none;
-	margin-right:5px;
-}
-.searchForme form input[type=text]:focus, .subSearch form select:focus{
+.searchForme form input[type=text]:focus, .subSearch select:focus{
 	border-bottom: solid 1px #69be28;
 }
-.searchForm1, .subSearch form input[type=submit]{
+.searchForm1 {
 	background-color:#002244;
 	color:#69be28;
 	border-radius: 4px;
 	border:1px solid #69be28;
 	font-size:110%;
-}
-.searchForm1{
 	height: 35px;
 	width:94px;
 }
-.subSearch form input[type=submit]{
-	height: 22px;
-	width:60px;
-}
-.searchForm1:hover, .subSearch form input[type=submit]:hover{
+.searchForm1:hover {
 	background-color:#69be28;
 	color:#002244;
 }
 
-.subSearch{
-	width:90%;
-	height:20px;
-	margin-left:8%;
-	position:relative;
+.subSearch {
+	width:40%;
+	position:absolute;
+	right: 80px;
+	top: 10px;
 }
-.subSearch form{
+.subSearch div{
 	border: 6px solid #002244;
 	background-color:#002244;
 	border-radius: 6px;
 	color:#fff;
-	margin-bottom:20px;
-	margin-right:20px;
+	display: inline-block;
 }
-.subSearch form input, .subSearch form select {
+.subSearch input, .subSearch select {
 	border:none;
 	background-color:#002244;
 	border-bottom: solid 1px #fff;
 	color: #fff;
 	outline: none;
 	font-size:105%;
-	margin-right:5px;
+}
+#addNew {
+	float: right;
+	margin: 20px 70px 80px 0;
+}
+.searchByNameContainer {
+	position: absolute;
+	left: 80px;
+	top: 10px;
+	width: 45%;
+}
+.borderSearch {
+	padding: 0;
+	margin: 0;
+	width: 100%;
+}
+.borderSearch input[type=text] {
+	background: none;
+	border: none;
+	border-bottom: solid 1px #fff;
+	color: #fff;
+	font-size: 20px;
+	height: 32px;
+	width: 70%;
+}
+.borderSearch input[type=text]:focus {
+	outline: none;
+	border-bottom: solid 1px #69be28;
 }
 
 /*FIM FORMULARIO DE PESQUISA DE PRODUTOS*/
@@ -172,30 +191,49 @@ aside {
 
 /*TABLE FOR SEARCH TEST*/
 table {
-	width: 90%;
-    margin: 3% auto auto 5%;
+	width: 100%;
+    margin: 100px auto;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.6); 
 }
 #produto{
 	width: 70%;
 	float:left;
 }
+tr:nth-child(even) {
+	background-color: #002244;
+	color: #69be28;
+}
 tr:nth-child(odd) {
-	background-color: #f8f8f8;
-	color: rgb(0, 0, 0);  
+	background-color: #a5acaf;
+	color: #002244;  
 }
 #acoes{
     width: 35%;
 }
-th {    
-	font-size: 110%;
-    font-weight: bold;
+td, th {	
+	height: 85px;
+	padding: 0 40px;
+	text-align: left;
 }
-td, th {
-	border: solid 1px rgba(0, 0, 0, 0.1);
-	padding: 5px 10px;
+td {
+	border: solid .5px #ddd;
 }
-
+table td + td,
+table th + th
+{
+    text-align: center;
+}
+th {
+	background-color: #a5acaf;
+	border-bottom: solid 10px #69be28;
+	color: #002244;
+	font-size: 20px;
+	font-weight: bold;
+	text-transform: uppercase;
+}
+tr:hover {
+	border-bottom: solid 2px #a5acaf;
+}
 /*END TABLE FOR SEARCH TEST*/
 
 
@@ -208,19 +246,19 @@ td, th {
 
 
 #actionMsg {
-			box-sizing: border-box;
-			color: #69be28;
-			font-weight: bold;
-			text-align: center;
-			font-size:140%;
-			background-color:#002244;
-			position: absolute;
-			margin-left:50%;
-			margin-top:4px;
-			left:-200px;
-			width:400px;
-			border-radius: 3px;
-		}
+	box-sizing: border-box;
+	color: #69be28;
+	font-weight: bold;
+	text-align: center;
+	font-size:140%;
+	background-color:#002244;
+	position: absolute;
+	margin-left:50%;
+	margin-top:4px;
+	left:-200px;
+	width:400px;
+	border-radius: 3px;
+}
 		
 /*BOTÃO ADICIONAR NOVO REGISTRO*/
 #btnContainer {
@@ -245,15 +283,11 @@ td, th {
 
 /*botões das tabelas*/
 .edita, .deleta {
-	padding: 5px 10px;
+	padding: 10px 10px;
 	text-align: center;
 	text-decoration: none;
-	width: 80px;
-    height: 25px;
     border-radius: 4px;
-    color:white;
-    margin-top: 2%;
-    margin-right: 2%;
+    margin-right: 10px;
     float: left;
     font-weight: bold;
 }
@@ -266,11 +300,11 @@ td, th {
 }
 
 .deleta {
-	background-color: #002244;
+	background-color: #cc0000;
 	color: #69be28;
 }
 .deleta:hover {
-    background-color: #000a13;
+    background-color: #cc0033;
 }
 /*fim botões das tabelas*/
 
@@ -327,4 +361,21 @@ article {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.4);
+}
+
+/*FOOTER*/
+footer {
+	background-color: #002244;
+	border-top: solid 4px #69be28;
+	margin-top: 350px;
+	padding: 20px 0;
+	width: 100%;
+}
+footer p {
+	color: #69be28;
+	margin-bottom: 10px;
+	text-align: center;
+}
+footer p:last-child {
+	margin-bottom: 0;
 }
